2004-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/nl.po: Spelling fixes.

	* autogen.sh (srcdir): Regenerate.

	* stepmake/autogen.sh (srcdir): Copy SUSE fix to the master
	autogen.sh.

	* configure.in: Use C++ to check for C++ header.

	* po/nl.po: Update.

	* lily/scm-option.cc (LY_DEFINE): Name of the program is lilypond-bin.

	* lily/event.cc (to_relative_octave): Translatable sentence should
	be one string.

	* python/lilylib.py (warranty): Year range is not translatable.
	It's 2004 already!

	* flower/warn.cc (non_fatal_error, warning, programming_error):
	Remove whitespace from translated string.

2004-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* VERSION: release 2.1.37.

2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* configure.in: check for C language.

	* lily/source-file.cc: include strstream without h.

	* scm/documentation-generate.scm (string-append): use name without
	.texi.

	* autogen.sh (srcdir): SUSE fix.

	* Documentation/user/notation.itely (Ancient clefs): idem.

	* Documentation/user/lilypond-book.itely (Integrating HTML and music): idem.

	* Documentation/user/cheatsheet.itely (Cheat sheet): octave fixes.

	* lily/change-iterator.cc (process): use find_existing_context().

	* input/test/polymetric-differing-notes.ly: use ly:music-compress.

	* input/regression/repeat-unfold-tremolo.ly: new file.

	* scm/music-functions.scm (unfold-repeats): undo music compression
	too.

	* lily/music.cc (LY_DEFINE): rename to music-mutable-properties
	(LY_DEFINE): ly:music-compress new function.

	* scm/part-combiner.scm (determine-split-list): split for voice
	crossings

	* input/regression/part-combine-cross.ly: new file.

	* scm/part-combiner.scm (make-part-combine-music): don't do
	relative inside partcombine arguments.

	* scm/music-functions.scm (make-non-relative-music): new function.

	* Documentation/user/notation.itely (Automatic part combining):
	add note about \relative.

	* lily/part-combine-iterator.cc (construct_children): add